**Add SQS listener module with message handling and configuration**
- Introduced `sqs-listener` module for AWS SQS integration:
  - Developed `SQSListener` class to process SQS messages using Reactor.
  - Added `SQSProperties` for SQS-related configurations.
  - Implemented `SQSConfig` for SQS client and listener setup.
  - Created `SQSProcessor` for message processing logic.

- Enhanced application configuration:
  - Updated `application.yaml` with SQS properties.
  - Refined Gradle dependencies to include `sqs-listener` module.

- Added tests for SQS listener and configuration:
  - Created unit tests for `SQSListener`, `SQSConfig`, and `SQSProperties`.

- Improved AWS Micrometer metrics to use `Collector` for better tag filtering.